Fix: remove TinaCMS CLI from build script

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "yarn tinacms server:start -c \"next build\"",
-    "start": "yarn tinacms server:start -c \"next start\"",
+    "build": "next build",
+
+   
     "lint": "next lint"
   },
   "dependencies": {
